# Routine-Manager

./: README.md  environment.yml  pyproject.toml  requirements.txt
fastapi-auth-backend/: .env_example  environment.yml  logging.json  main.py  supabase-guide.md
fastapi-auth-backend/app/core/: auth.py  db.py  openai_client.py  supabase_client.py  whatsapp.py
fastapi-auth-backend/app/integrations/: whatsapp_client.py
fastapi-auth-backend/app/schemas/: chat.py  reminders.py  settings.py  subtasks.py  tags.py  tasks.py
fastapi-auth-backend/app/worker/: dispatcher.py  reminder_loop.py
fastapi-auth-backend/sql/: notifications_claim_rpc.sql
fastapi-auth-frontend/: middleware.ts  next.config.mjs  package-lock.json  package.json  postcss.config.mjs  tsconfig.json
fastapi-auth-frontend/app/: layout.tsx  page.tsx
fastapi-auth-frontend/app/dashboard/: page.tsx
fastapi-auth-frontend/components/: CalendarTopbar.tsx  CalendarView.tsx  CalendarWidget.tsx  ClientProviders.tsx  EventDialog.tsx  EventPopover.tsx  GlobalTopbar.tsx  NewTaskDialog.tsx  PageShell.tsx  Sidebar.tsx  UserMini.tsx
fastapi-auth-frontend/components/auth/: auth-container.tsx  forgot-password-form.tsx  login-form.tsx  register-form.tsx  (+1 more)
fastapi-auth-frontend/data/: tasks.mock.ts
fastapi-auth-frontend/lib/: api.ts  auth-api.ts  supabaseClient.ts  tasks.api.ts  time.ts
fastapi-auth-frontend/styles/: CalendarWidget.module.css  calendar.css  globals.css  primarybar.css
fastapi-auth-frontend/types/: rbc-timegrid.d.ts  react-big-calendar-dnd.d.ts  react-big-calendar-timegrid.d.ts  task.ts
(+31 files in other folders)
